--- a/KIZImagePlayer/Base.lproj/Main.storyboard
+++ b/KIZImagePlayer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -22,12 +22,27 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="zDd-UH-pID"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="autoScrollInterval">
+                                        <real key="value" value="4"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="pageControl" destination="Qjn-Dp-Y4g" id="T2g-OJ-6WA"/>
+                                </connections>
                             </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Qjn-Dp-Y4g">
+                                <rect key="frame" x="140" y="120" width="39" height="37"/>
+                                <color key="pageIndicatorTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="currentPageIndicatorTintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="eAF-8X-Dud" firstAttribute="bottom" secondItem="Qjn-Dp-Y4g" secondAttribute="bottom" constant="-7" id="Jse-3J-Gzb"/>
                             <constraint firstItem="eAF-8X-Dud" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="Lng-iE-7T2"/>
                             <constraint firstItem="eAF-8X-Dud" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="Os0-Xe-nFl"/>
+                            <constraint firstAttribute="centerX" secondItem="Qjn-Dp-Y4g" secondAttribute="centerX" constant="0.5" id="gAm-Wx-2Mp"/>
                             <constraint firstAttribute="trailing" secondItem="eAF-8X-Dud" secondAttribute="trailing" id="iCb-7u-DCW"/>
                         </constraints>
                     </view>
